--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home-page": "http://ivanl58.github.io/ok"
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -8,6 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.8",
